# redis-lite

./: Cargo.toml  README.md  justfile
devlogs/: high-level-design.md
devlogs/high-level-designs/: target-0.1.0.md
docs/: high-level-design.md
src/: err.rs  main.rs  memory.rs  request.rs  resp.rs  response.rs  session.rs
src/commands/: echo.rs  get.rs  mod.rs  not_found.rs  ping.rs  set.rs
