[package]
name = "redis-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
bytes = "1"
log = "0.4.20"
env_logger = "0.10.1"

[scripts]
run = "cargo run"
dev = "RUST_LOG=trace cargo run "
